# Learning_cpp

CLI-calculator/: calculator.cpp
FSM/: fsm_simulator  fsm_simulator.cpp
MMORPG_Game/: CMakeLists.txt
MMORPG_Game/config/: bot_config.json
MMORPG_Game/include/: Game.hpp
MMORPG_Game/include/entities/: Bot.hpp  BotConfig.hpp  Character.hpp
MMORPG_Game/src/: Game.cpp  bot_example.cpp  main.cpp
MMORPG_Game/src/entities/: Bot.cpp  BotConfig.cpp
Neural Network From Scratch/: Neural_network.cpp
TaskManager/: main.cpp  task.cpp  task.hpp  task_manager  task_manager.cpp  task_manager.hpp  tasks.txt
TaskManager/task_manager.dSYM/Contents/: Info.plist
TaskManager/task_manager.dSYM/Contents/Resources/DWARF/: task_manager
TaskManager/task_manager.dSYM/Contents/Resources/Relocations/aarch64/: task_manager.yml
TaskScheduler/: CMakeLists.txt
TaskScheduler/include/: Task.hpp  TaskScheduler.hpp
TaskScheduler/src/: Task.cpp  TaskScheduler.cpp  main.cpp
enigma/: enigma.hpp  main.cpp
